--- a/styles.css
+++ b/styles.css
@@ -34,6 +34,10 @@ li {
     flex: 1;
 }
 
+.container {
+    padding: 50px 0;
+}
+
 .row {
     width: 100%;
     max-width: 800px;
@@ -42,6 +46,14 @@ li {
 
 .text-purple {
     color: #6030b1;
+}
+
+section:nth-child(even) {
+    background-color: #f8f8f8;
+}
+
+.section__title {
+    margin-bottom: 20px;
 }
 
 /* NAVIGATION BAR */
@@ -123,7 +135,8 @@ nav {
 
     /* IMPROVING PIC */
     transform: scale(1.5);
-    padding-top: 8px;
+    padding-left: 15px;
+    padding-top: 10px;
 }
 .about-me__info--title {
     margin-bottom: 16px;
@@ -145,8 +158,55 @@ nav {
     flex: 1;
     display: flex;
     align-items: center;
+    margin-top: 100px;
 }
 
 .about-me__img {
     width: 100%;
+}
+
+/* TECH - STACK */
+
+.language__img {
+    width: 100%;
+    max-width: 100px;
+    transition: all 300ms ease;
+}
+
+.language:hover .language__img {
+    filter: brightness(80%);
+    opacity: 0.86;
+    transform: scale(0.9);
+}
+
+.language {
+    width: 25%;
+    display: flex;
+    justify-content: center;
+    position: relative;
+}
+
+.language__img--wrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 25px 16px;
+}
+
+.language__list {
+    display: flex;
+    width: 100%;
+    flex-wrap: wrap;
+}
+
+.language__name {
+    position: absolute;
+    bottom: 0;
+    transform: scale(0);
+    transition: all 300ms;
+    font-size: 20px;
+}
+.language:hover .language__name {
+    transform: scale(1);
+    opacity: 1;
 }
