--- a/styles.css
+++ b/styles.css
@@ -210,3 +210,32 @@ nav {
     transform: scale(1);
     opacity: 1;
 }
+
+/* PROJECTS */
+
+.project__img {
+    width: 100%;
+}
+
+.project__wrapper {
+    display: flex;
+    box-shadow: 0 20px 80px rgba(0, 0, 0, 0.45);
+    border-radius: 20px;
+    overflow: hidden;
+    position: relative;
+}
+
+.project__wrapper::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    background-color: #1c1d25;
+    opacity: 0;
+    transition: all 300ms;
+}
+.project:hover .project__wrapper:before {
+    opacity: 0.7;
+}
